--- a/configs/nexen_x86_64_defconfig
+++ b/configs/nexen_x86_64_defconfig
@@ -3,7 +3,7 @@ BR2_x86_64=y
 
 # System
 BR2_SYSTEM_DHCP="eth0"
-BR2_TARGET_GENERIC_GETTY_PORT="tty1"
+BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 
 # Filesystem
 BR2_TARGET_ROOTFS_EXT2=y
@@ -23,3 +23,14 @@ BR2_PACKAGE_SHADOWSOCKS_LIBEV_CONNMARKTOS=y
 
 # glorytun
 BR2_PACKAGE_GLORYTUN=y
+
+# DNSMASQ dns only
+BR2_PACKAGE_DNSMASQ=y
+# BR2_PACKAGE_DNSMASQ_TFTP is not set
+# BR2_PACKAGE_DNSMASQ_DHCP is not set
+
+# Iptables for QoS
+BR2_PACKAGE_IPTABLES=y
+
+# Iperf3
+BR2_PACKAGE_IPERF3=y
